syntax="proto3";

package com.mulani.grpc_project;

option java_multiple_files=true;

service GreetingService {
  rpc sayHello (GreetingRequest) returns (GreetingResponse) {
  }
}

message GreetingRequest {
  string name = 1;
}

message GreetingResponse {
  string message = 1;
}